# BitCoin

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bdssim/: __init__.py  ceilings.py  cli.py  config.py  dashboard.py  dashboard_arcade.py  playbooks.py
bdssim/accounting/: __init__.py  ledger.py
bdssim/adoption/: __init__.py  bass.py  countries.py  threshold.py
bdssim/analysis/: __init__.py  influence.py  metrics.py
bdssim/data/: __init__.py  constants.py  market_data.py
bdssim/engine/: __init__.py  adoption.py  mc.py  monte_carlo.py  scenarios.py  simulation.py  state.py  stats.py
bdssim/market/: __init__.py  execution.py  exogenous.py  impact.py
bdssim/reporting/: debt.py  pdf.py  plots.py  report.py  report_builder.py  static_meta.py  summary.py
bdssim/supply/: __init__.py  issuance.py
bdssim/treasury/: __init__.py  policy.py
bdssim/utils/: io.py  logging.py  rng.py  validation.py
bitcoin_debt_solution_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configs/: base.yaml  optimistic.yaml  stress_liquidity.yaml  threshold_network.yaml
configs/playbooks/: eastward.yaml  index.yaml  (+1 more)
docs/: adoption_parameters.md  analysis_workflow.md  overview.md
notebooks/: 01_calibration_and_checks.ipynb  02_price_impact_validation.ipynb  03_scenarios_and_sensitivity.ipynb
scripts/: python_setup_personal.ps1  run_mc.py
tests/: test_accounting.py  test_adoption_bass.py  test_adoption_gating.py  test_adoption_threshold.py  test_analysis_utils.py  test_engine_properties.py  test_m1_gating_foundations.py  test_m2_postcap_invariants.py  test_m3_ceilings_monotonicity.py  test_m3_reporting_sections.py  test_m4_dashboard_wireup.py  test_m4_mc_integration.py  test_m4_percentiles.py  test_m4_report_threading.py  test_market_data.py  test_market_impact.py  test_pdf_report.py  test_playbooks.py  test_postcap.py  test_static_reporting.py  test_supply.py  test_treasury_policy.py
(+9 files in other folders)
